<resources>
    <string name="app_name">BestFlix</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Movie</string>
    <string name="title_tv">TV Shows</string>
    <string name="title_about">About</string>
    <string name="movie_list">Movie List</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="movie_date">Release Date</string>
    <string name="language">en-US</string>
    <string name="votes">Votes</string>
    <string name="description">Description</string>
    <string name="error">Error, Try again later !</string>
    <string name="title_movies">Movies</string>
    <string name="tvshow_date">First Air Date</string>
    <string name="title_tvshow_detail">TV Show Detail</string>
    <string name="title_tvshows">TV Shows</string>
    <string name="text_about"><![CDATA[BestFlix App made by: DAUMAS Timmy & LACOMME Antonin\n\n\n
        It lets you go through movies and tv shows and see their details and is based on developers.themoviedb.org\n\n\n
        First button lets you see the movies categories, the second one lets you see the tv shows categories and the last one is for this page.\n\n\n
        By clicking on the categories, you can see the movies / tv shows in that category and then clicking on a movie / tv show lets you see the details of that movie / tv show.]]>
    </string>
</resources>